FIX: Big tooltips (20+ lines) were not displayed over all other elements in the grid
if the tool tip was very big andf the browser window too small it could also move the grid borders

--- a/src/gui/Components/ScreenElements/Table/Table.module.scss
+++ b/src/gui/Components/ScreenElements/Table/Table.module.scss
@@ -112,6 +112,13 @@
   justify-content: left;
 }
 
+:global(.tippy-popper) {
+  background-color: white;
+  max-height: 400px;
+  overflow-y: auto;
+  pointer-events: all;
+};
+
 /*.positionedFieldContainer {
   position: absolute;
   top: 0;
